--- a/card.css
+++ b/card.css
@@ -5,6 +5,7 @@
     text-align: center;
     font-family: 'IBM Plex Serif', serif;
     font-size: 12px;
+    /* float:right; */
   }
   
   .title {
