--- a/card.css
+++ b/card.css
@@ -19,8 +19,8 @@
     outline: 0;
     display: inline-block;
     padding: 4px;
-    color: white;
-    background-color:#FF6A00;
+    color: black;
+    background-color:#EEE2DE;
     text-align: center;
     cursor: pointer;
     width: 100%;
